language/move-lang/tests/move_check/typing/declare_duplicate_binding.move
module 0x8675309::M {
    struct R {f: u64}

    fun t0() {
        let (x, x);
        let (f, R{f}, f);
        x = 0;
        f = 0;
    }
}
